--- a/app/src/main/res/layout/fragment_lesson.xml
+++ b/app/src/main/res/layout/fragment_lesson.xml
@@ -17,8 +17,8 @@
             android:id="@+id/cardview_beginner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/default_background"
             app:cardCornerRadius="16dp"
-            android:backgroundTint="@color/beginner_card"
             app:cardElevation="4dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -68,8 +68,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:backgroundTint="@color/default_background"
             app:cardCornerRadius="16dp"
-            android:backgroundTint="@color/intermediate_card"
             app:cardElevation="4dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -119,8 +119,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
+            android:backgroundTint="@color/default_background"
             app:cardCornerRadius="16dp"
-            android:backgroundTint="@color/advanced_card"
             app:cardElevation="4dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -168,8 +168,8 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="2dp"
-            android:background="#E0E0E0"
-            android:layout_marginTop="24dp" />
+            android:layout_marginTop="24dp"
+            android:background="#E0E0E0" />
 
         <TextView
             android:id="@+id/tv_view_connect"
@@ -177,15 +177,15 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="@string/prompt_connect_us"
-            android:textStyle="bold"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="16dp"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/iv_facebook"
@@ -193,8 +193,8 @@
                 android:layout_height="32dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
-                android:src="@drawable/ic_facebook"
-                android:contentDescription="Facebook" />
+                android:contentDescription="Facebook"
+                android:src="@drawable/ic_facebook" />
 
             <ImageView
                 android:id="@+id/iv_twitter"
@@ -202,8 +202,8 @@
                 android:layout_height="32dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
-                android:src="@drawable/ic_tiktok"
-                android:contentDescription="Tiktok" />
+                android:contentDescription="Tiktok"
+                android:src="@drawable/ic_tiktok" />
 
             <ImageView
                 android:id="@+id/iv_instagram"
@@ -211,8 +211,8 @@
                 android:layout_height="32dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
-                android:src="@drawable/ic_zalo"
-                android:contentDescription="Zalo" />
+                android:contentDescription="Zalo"
+                android:src="@drawable/ic_zalo" />
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
